# python-tackerclient

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  lower-constraints.txt  openstack-common.conf  requirements.txt  setup.cfg  tacker_test.sh  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/cli/: commands.rst  index.rst  nfv_event_commands.rst  ns_commands.rst  ns_descriptor_commands.rst  vim_commands.rst  vnf_chain_commands.rst  vnf_classifier_commands.rst  vnf_commands.rst  vnf_descriptor_commands.rst  vnf_graph_commands.rst  vnf_graph_descriptor_commands.rst  vnf_network_forwarding_path_commands.rst  vnf_package_commands.rst  vnffm_commands.rst  vnflcm_commands.rst  vnfpm_commands.rst
doc/source/contributor/: contributing.rst  developing.rst  index.rst
doc/source/install/: index.rst
doc/source/reference/: index.rst
neutronclient/neutron/v2_0/: __init__.py  agentscheduler.py  credential.py  extension.py  floatingip.py  metering.py  netpartition.py  network.py  networkprofile.py  policyprofile.py  port.py  quota.py  router.py  securitygroup.py  subnet.py
neutronclient/neutron/v2_0/fw/: firewall.py  firewallpolicy.py  firewallrule.py
neutronclient/neutron/v2_0/lb/: healthmonitor.py  member.py  pool.py  vip.py
neutronclient/neutron/v2_0/nsx/: networkgateway.py  qos_queue.py
neutronclient/neutron/v2_0/vpn/: ikepolicy.py  ipsec_site_connection.py  ipsecpolicy.py  vpnservice.py
releasenotes/notes/: add-vnffg-and-vnf-ids-to-ns-list-commands-9d462efc103f8ecb.yaml  bug-1750865-04c3ebd0c3f8af29.yaml  bug-1754556-53268d3081fa18d1.yaml  bug-1754793-54446bcd0a4e84aa.yaml  bug-1754926-06ac4d7ffd17b5ce.yaml  classifier-name-attr-addition-06f6abe90adb40fa.yaml  clustering-service-cli-e15cc6627de293fa.yaml  del-project_and_user_id-e9dd396f83a162d6.yaml  deprecate-direct-yaml-cli-input-812564bab1b99b4b.yaml  deprecate-infra-mgmt-driver-attributes-e371624c50accee8.yaml  deprecated-tacker-command-29121558bd748082.yaml  drop-py-2-7-b2052825c4b92b52.yaml  multi-delete-support-in-tacker-acd4a7e86114f0be.yaml  network-services-descriptor-06f6abe90adb40f3.yaml  new-commmand-vnf-resource-list-d5422ab917f0892f.yaml  obsolete-legacy-apis-excluding-vim-43d8dd73c3768fbb.yaml  remove-passing-mgmt-and-infra-driver-from-client-c9135f84480b2cae.yaml  support-ssl-openstack-vim-0aa6abe90adb40f4.yaml  tacker-support-python-openstackclient-b88b20b80b872229.yaml  update-vim-without-config-c3b637741889eff6.yaml  vim-osc-commands-06f6abe90adb40f7.yaml  vnf-inline-template-25f6a0b66f7407a1.yaml  vnfd-vnf-vim-name-mandatory-in-tacker-cli-dfe802af6de5c80e.yaml  vnffg-client-abd7d7f06860b91d.yaml  vnffg-template-update-0af6abe90adb40f4.yaml
releasenotes/source/: conf.py  index.rst
tackerclient/: client.py  i18n.py  shell.py  version.py
tackerclient/common/: __init__.py  _i18n.py  clientmanager.py  command.py  constants.py  exceptions.py  extension.py  serializer.py  utils.py  validators.py
tackerclient/openstack/common/: gettextutils.py  importutils.py  jsonutils.py  strutils.py
tackerclient/osc/: plugin.py  sdk_utils.py  utils.py
tackerclient/osc/common/vnflcm/: vnflcm_versions.py
tackerclient/osc/v1/events/: events.py
tackerclient/osc/v1/nfvo/: ns.py  nsd.py  vim.py  vnffg.py  vnffgd.py
tackerclient/osc/v1/vnflcm/: vnflcm.py  vnflcm_op_occs.py  vnflcm_subsc.py
tackerclient/osc/v1/vnflcm/samples/: change_ext_conn_vnf_instance_param_sample.json  create_lccn_subscription_param_sample.json  heal_vnf_instance_param_sample.json  instantiate_vnf_instance_param_sample.json  scale_vnf_instance_param_sample.json  update_vnf_instance_param_sample.json
tackerclient/osc/v1/vnfm/: vnf.py  vnfd.py
tackerclient/osc/v1/vnfpkgm/: vnf_package.py
tackerclient/osc/v2/vnffm/: vnffm_alarm.py  vnffm_sub.py
tackerclient/osc/v2/vnffm/samples/: create_vnf_fm_subscription_param_sample.json
tackerclient/osc/v2/vnflcm/samples/: change_vnfpkg_vnf_instance_param_sample.json
tackerclient/osc/v2/vnfpm/: vnfpm_job.py  vnfpm_report.py  vnfpm_threshold.py
tackerclient/osc/v2/vnfpm/samples/: create_vnf_pm_job_param_sample.json  create_vnf_pm_threshold_param_sample.json  update_vnf_pm_job_param_sample.json  update_vnf_pm_threshold_param_sample.json
tackerclient/tacker/: client.py
tackerclient/tacker/v1_0/: __init__.py  extension.py
tackerclient/tacker/v1_0/events/: events.py
tackerclient/tacker/v1_0/nfvo/: ns.py  nsd.py  vim.py  vim_utils.py  vnfcluster.py  vnffg.py  vnffgd.py
tackerclient/tacker/v1_0/vm/: device.py  device_template.py  service_instance.py  vnf.py  vnfd.py
tackerclient/tacker/v1_0/vnfm/: vnf.py  vnfd.py
tackerclient/tests/unit/: test_auth.py  test_casual_args.py  test_cli10.py  test_cli10_event.py  test_cli20.py  test_cli20_extensions.py  test_command_meta.py  test_http.py  test_shell.py  test_ssl.py  test_utils.py  test_validators.py
tackerclient/tests/unit/osc/: base.py
tackerclient/tests/unit/osc/common/: test_vnflcm_versions.py
tackerclient/tests/unit/osc/samples/: vnf_update_config.yaml  vnf_update_invalid_format_config.yaml  vnf_update_invalid_format_param.yaml  vnf_update_param.yaml
tackerclient/tests/unit/osc/v1/: test_vnf_package.py  test_vnflcm.py  test_vnflcm_op_occs.py  test_vnflcm_subsc.py  vnf_package_fakes.py  vnflcm_fakes.py  vnflcm_op_occs_fakes.py  vnflcm_subsc_fakes.py
tackerclient/tests/unit/osc/v2/: test_vnffm_alarm.py  test_vnffm_sub.py  test_vnflcm.py  test_vnfpm_job.py  test_vnfpm_report.py  test_vnfpm_threshold.py  vnffm_alarm_fakes.py  vnffm_sub_fakes.py  vnfpm_job_fakes.py  vnfpm_report_fakes.py  vnfpm_threshold_fakes.py
tackerclient/tests/unit/vm/: test_cli10_device.py  test_cli10_device_template.py  test_cli10_service_instance.py  test_cli10_v10_event.py  test_cli10_vim.py  test_cli10_vim_k8s.py  test_cli10_vim_k8s_with_bearer_token.py  test_cli10_vnf.py  test_cli10_vnfd.py  test_cli10_vnffg.py  test_cli10_vnffgd.py  test_vim_utils.py
tackerclient/v1_0/: client.py
tools/: tacker.bash_completion
(+14 files in other folders)
