[metadata]
name = python-tackerclient
summary = CLI and Client Library for OpenStack Tacker
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/tacker/latest
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    tackerclient

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    tacker = tackerclient.shell:main

openstack.cli.extension =
    tackerclient = tackerclient.osc.plugin

openstack.tackerclient.v1 =
     vim_register = tackerclient.osc.v1.nfvo.vim:CreateVIM
     vim_list = tackerclient.osc.v1.nfvo.vim:ListVIM
     vim_set = tackerclient.osc.v1.nfvo.vim:UpdateVIM
     vim_delete = tackerclient.osc.v1.nfvo.vim:DeleteVIM
     vim_show = tackerclient.osc.v1.nfvo.vim:ShowVIM
     vnf_descriptor_create = tackerclient.osc.v1.vnfm.vnfd:CreateVNFD
     vnf_descriptor_delete = tackerclient.osc.v1.vnfm.vnfd:DeleteVNFD
     vnf_descriptor_list = tackerclient.osc.v1.vnfm.vnfd:ListVNFD
     vnf_descriptor_show = tackerclient.osc.v1.vnfm.vnfd:ShowVNFD
     vnf_descriptor_template_show = tackerclient.osc.v1.vnfm.vnfd:ShowTemplateVNFD


[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source

[wheel]
universal = 1
