[metadata]
name = python-tackerclient
summary = CLI and Client Library for OpenStack Tacker
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/python-tackerclient/
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    tackerclient

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    tacker = tackerclient.shell:main

openstack.cli.extension =
    tackerclient = tackerclient.osc.plugin

openstack.tackerclient.v1 =
     vim_register = tackerclient.osc.v1.nfvo.vim:CreateVIM
     vim_list = tackerclient.osc.v1.nfvo.vim:ListVIM
     vim_set = tackerclient.osc.v1.nfvo.vim:UpdateVIM
     vim_delete = tackerclient.osc.v1.nfvo.vim:DeleteVIM
     vim_show = tackerclient.osc.v1.nfvo.vim:ShowVIM
     vnf_descriptor_create = tackerclient.osc.v1.vnfm.vnfd:CreateVNFD
     vnf_descriptor_delete = tackerclient.osc.v1.vnfm.vnfd:DeleteVNFD
     vnf_descriptor_list = tackerclient.osc.v1.vnfm.vnfd:ListVNFD
     vnf_descriptor_show = tackerclient.osc.v1.vnfm.vnfd:ShowVNFD
     vnf_descriptor_template_show = tackerclient.osc.v1.vnfm.vnfd:ShowTemplateVNFD
     vnf_create = tackerclient.osc.v1.vnfm.vnf:CreateVNF
     vnf_delete = tackerclient.osc.v1.vnfm.vnf:DeleteVNF
     vnf_list = tackerclient.osc.v1.vnfm.vnf:ListVNF
     vnf_show = tackerclient.osc.v1.vnfm.vnf:ShowVNF
     vnf_resource_list = tackerclient.osc.v1.vnfm.vnf:ListVNFResources
     vnf_set = tackerclient.osc.v1.vnfm.vnf:UpdateVNF
     vnf_scale = tackerclient.osc.v1.vnfm.vnf:ScaleVNF
     vnf_graph_descriptor_create = tackerclient.osc.v1.nfvo.vnffgd:CreateVNFFGD
     vnf_graph_descriptor_delete = tackerclient.osc.v1.nfvo.vnffgd:DeleteVNFFGD
     vnf_graph_descriptor_list = tackerclient.osc.v1.nfvo.vnffgd:ListVNFFGD
     vnf_graph_descriptor_show = tackerclient.osc.v1.nfvo.vnffgd:ShowVNFFGD
     vnf_graph_descriptor_template_show = tackerclient.osc.v1.nfvo.vnffgd:ShowTemplateVNFFGD
     ns_descriptor_create = tackerclient.osc.v1.nfvo.nsd:CreateNSD
     ns_descriptor_delete = tackerclient.osc.v1.nfvo.nsd:DeleteNSD
     ns_descriptor_list = tackerclient.osc.v1.nfvo.nsd:ListNSD
     ns_descriptor_show = tackerclient.osc.v1.nfvo.nsd:ShowNSD
     ns_descriptor_template_show = tackerclient.osc.v1.nfvo.nsd:ShowTemplateNSD
     nfv_event_show = tackerclient.osc.v1.events.events:ShowEvent
     nfv_event_list = tackerclient.osc.v1.events.events:ListEvent
     ns_create = tackerclient.osc.v1.nfvo.ns:CreateNS
     ns_delete = tackerclient.osc.v1.nfvo.ns:DeleteNS
     ns_list = tackerclient.osc.v1.nfvo.ns:ListNS
     ns_show = tackerclient.osc.v1.nfvo.ns:ShowNS
     vnf_graph_create = tackerclient.osc.v1.nfvo.vnffg:CreateVNFFG
     vnf_graph_delete = tackerclient.osc.v1.nfvo.vnffg:DeleteVNFFG
     vnf_graph_set = tackerclient.osc.v1.nfvo.vnffg:UpdateVNFFG
     vnf_graph_list = tackerclient.osc.v1.nfvo.vnffg:ListVNFFG
     vnf_graph_show = tackerclient.osc.v1.nfvo.vnffg:ShowVNFFG
     vnf_network_forwarding_path_list = tackerclient.osc.v1.nfvo.vnffg:ListNFP
     vnf_network_forwarding_path_show = tackerclient.osc.v1.nfvo.vnffg:ShowNFP
     vnf_classifier_list = tackerclient.osc.v1.nfvo.vnffg:ListFC
     vnf_classifier_show = tackerclient.osc.v1.nfvo.vnffg:ShowFC
     vnf_chain_list = tackerclient.osc.v1.nfvo.vnffg:ListSFC
     vnf_chain_show = tackerclient.osc.v1.nfvo.vnffg:ShowSFC
     vnf_package_create = tackerclient.osc.v1.vnfpkgm.vnf_package:CreateVnfPackage
     vnf_package_list = tackerclient.osc.v1.vnfpkgm.vnf_package:ListVnfPackage
     vnf_package_show = tackerclient.osc.v1.vnfpkgm.vnf_package:ShowVnfPackage
     vnf_package_upload = tackerclient.osc.v1.vnfpkgm.vnf_package:UploadVnfPackage
     vnf_package_delete = tackerclient.osc.v1.vnfpkgm.vnf_package:DeleteVnfPackage


[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source

[wheel]
universal = 1
